webhook/deployment/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    role: webhook
  name: webhook
spec:
  containers:
    - name: webhook
      image: gcr.io/jiji-168714/cr-crd-admission-webhook-amd64:1.10v2
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8000
