webhook/deployment/crd-validating-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: crd-validating-webhook
  name: crd-validating-webhook
spec:
  ports:
    - name: https
      port: 443
      protocol: "TCP"
  selector:
    app: crd-validating-webhook
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: crd-validating-webhook
spec:
  template:
    metadata:
      labels:
        app: crd-validating-webhook
    spec:
      containers:
        - name: crd-validating-webhook
          image: "gcr.io/jiji-168714/cr-crd-admission-webhook-amd64:1.10v2"
          imagePullPolicy: Always
