webhook/deployment/admissionregistration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: crd-validating-webhook
webhooks:
  - name: crd-validating-webhook.k8s.io
    rules:
      - operations:
          - CREATE
        apiGroups:
          - ""
        apiVersions:
          - v1
        resources:
          - pods
    failurePolicy: Ignore
    clientConfig:
      service:
        namespace: default
        name: crd-validating-webhook
      caBundle:
